--- a/gradle-plugins/gradle.properties
+++ b/gradle-plugins/gradle.properties
@@ -6,7 +6,7 @@ kotlin.code.style=official
 # unless overridden by COMPOSE_GRADLE_PLUGIN_COMPOSE_VERSION env var.
 #
 # __LATEST_COMPOSE_RELEASE_VERSION__
-compose.version=1.0.0-alpha4-build328
+compose.version=1.0.0-beta1
 compose.with.web=false
 
 # A version of Gradle plugin, that will be published,
